--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@next/font": "13.0.7",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
+    "@types/react-countup": "^4.3.1",
     "@types/react-dom": "18.0.9",
     "next": "13.0.7",
     "react": "18.2.0",
+    "react-countup": "^6.4.0",
     "react-dom": "18.2.0",
+    "react-scroll-trigger": "^0.6.14",
     "typescript": "4.9.4"
   }
 }
